consideration, now followed by ray hit side, followed by
modifier definition order in the input.

Increased octree and object limits to allow scenes with billions
of primitives.

Made reciprocity averaging default to "off" in bsdf2ttree, as it seems
to create more problems than it solves.

====================
Version 6.0

Extensive changes to enable spectral rendering, which defaults to "off"
to maintain backwards-compatibility with previous versions, with the
exception of the ambient file format, which is changed.  The MAXCSAMP
macro, which defaults to 24, sets the maximum number of spectral samples.
The actual number of samples is set by the "-cs" option, which defaults
to 3 for rpict, rtrace, and rcontrib.  The latter two programs support
straight spectral output, but rpict is initially restricted to
tristimulus output pictures.  New pattern primitives "spectrum",
"specfile", and "specfunc" have been added as a means to specify
spectral reflectance, emittance, etc. to materials that still have
only 3 color channels.  Those RGB channels will still affect the
spectrum if used.  Unfortunately photon-mapping is currently broken when
spectral sampling is enabled, but we will fix this as soon as possible.
Calculation overhead appears to be approximately 10-15% for RGB
renderings compared to version 5.4a.

Added spectral rendering to rvu as well, and made -cs and -cw
options standard across the rendering library.  I also brought
mkillum, ranimove, rsensor, and mksource into the fold.  These
tools were broken in the initial release.  (Hopefully, they are
working now, but none have been tested as yet.)
There was also an indexing bug in the spectral->RGB conversions
that made reds into blues and vice versa, which has been fixed.

Added i/o for spectral pictures to rmtxop, the first program that can
ingest them.  (Only rtrace, rcontrib, and rfluxmtx can render them.)
Also added spectral picture support to rcrop and radcompare.